# tooling

./: .env.example  .gitignore  biome.json  deno.json  deps.toml  versions.json
.github/workflows/: ci.yml
playground/: setup-vendor.sh
playground/macro/: .gitignore  Cargo.toml  build.rs  gigaform.ts  index.d.ts  index.js  package-lock.json  package.json
playground/macro/src/: lib.rs  native.rs
playground/macro/src/gigaform/: field_descriptors.rs  form_data.rs  i18n.rs  mod.rs  naming.rs  parser.rs  types.rs
playground/svelte/: .gitignore  deno.json  macroforge.config.ts  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.js  vitest.config.ts  vitest.setup.ts
playground/svelte/messages/: en.json
playground/svelte/project.inlang/: settings.json
playground/svelte/scripts/: split_types.js
playground/svelte/src/lib/demo/: all-macros-test.expanded.ts  all-macros-test.ts  all-types.expanded.svelte.ts  all-types.svelte.ts  field-controller.expanded.ts  field-controller.ts  macro-user.expanded.ts  macro-user.ts  validator-form.expanded.ts  validator-form.ts
playground/svelte/src/lib/demo/types/: account-name.expanded.svelte.ts  account-name.svelte.ts  account.expanded.svelte.ts  account.svelte.ts  activity-type.expanded.svelte.ts  activity-type.svelte.ts  actor.expanded.svelte.ts  actor.svelte.ts  address.expanded.svelte.ts  address.svelte.ts  app-permissions.expanded.svelte.ts  app-permissions.svelte.ts  applications.expanded.svelte.ts  applications.svelte.ts  appointment-notifications.expanded.svelte.ts  appointment-notifications.svelte.ts  appointment.expanded.svelte.ts  color.svelte.ts  (+155 more)
playground/svelte/src/lib/e2e/: fixture.ts  types.svelte.ts
playground/svelte/src/lib/tests/: svelte5-mocks.js  svelte5-mocks.ts
playground/svelte/src/lib/utils/: nested-values.util.ts
playground/svelte/src/routes/: +layout.svelte  +page.svelte
playground/svelte/src/routes/gigaform/: +page.svelte
playground/svelte/src/routes/validator-form/: +page.svelte
playground/tests/: .gitignore  cli.test.mjs  deno.json  deser-e2e.test.mjs  dev-server.test.mjs  examples.test.mjs  expansion.test.mjs  foreign-types.test.mjs  gigaform.test.mjs  literal-types.test.mjs  package-lock.json  package.json  playwright.config.ts  playwright.svelte.config.ts  run-isolated.mjs  serde.test.mjs  svelte-check.test.mjs  test-utils.mjs  tsc.test.mjs  tsconfig.json  typescript-plugin-macro-intellisense.test.mjs  vite-plugin-e2e.test.mjs  vtsls-playground-switch.test.js  wasm-parity.js  wasm-parity.test.mjs
playground/tests/e2e/: svelte-gigaform.spec.ts  svelte-macros.spec.ts  svelte-validators.spec.ts  vanilla-macros.spec.ts  vanilla-validators.spec.ts
playground/tests/rust-tests/: .gitignore  Cargo.toml  deno.json  setup-vendor.sh
playground/tests/rust-tests/src/: ir_declarations.rs  ir_expressions.rs  ir_patterns.rs  ir_statements.rs  ir_types.rs  lib.rs  test_single.rs
playground/tests/rust-tests/src/fixtures/: field-controller.expanded.fixture.ts  field-controller.fixture.expanded.ts  field-controller.fixture.ts  macro-user.expanded.ts  macro-user.ts
playground/tests/test-results/: .last-run.json
playground/tests/test-results/vanilla-validators-Vanilla-d3c49-rejects-invalid-date-format-chromium/: error-context.md
playground/tests/validators/: array-validators.test.mjs  bigint-validators.test.mjs  custom-validators.test.mjs  date-validators.test.mjs  edge-cases.test.mjs  helpers.mjs  number-validators.test.mjs  string-validators.test.mjs
playground/tests/validators/.temp/: array-validator-tests.ts  bigint-validator-tests.ts  custom-validator-tests.ts  date-validator-tests.ts  edge-case-tests.ts  number-validator-tests.ts  string-validator-tests.ts
playground/vanilla/: .gitignore  benchmark.js  deno.json  index.html  macroforge.config.ts  macroforge.json  package-lock.json  package.json  tsconfig.json  validator-form.html  vite.config.js
playground/vanilla/src/: all-macros-test.expanded.ts  all-macros-test.ts  enum-type-examples.expanded.ts  enum-type-examples.ts  form-model.expanded.ts  form-model.ts  main.ts  runtime-deser-test.ts  store.svelte.ts  user.expanded.ts  user.ts  validator-form-page.ts  validator-form.expanded.ts  validator-form.ts
playground/vanilla/src/validators/: array-validator-tests.expanded.ts  array-validator-tests.ts  bigint-validator-tests.expanded.ts  custom-validator-tests.expanded.ts  date-validator-tests.expanded.ts  edge-case-tests.expanded.ts  number-validator-tests.expanded.ts  string-validator-tests.expanded.ts
scripts/: Cargo.toml  bench.mjs  build-docs-book.rs  bump-version.cjs  check-docs-freshness.cjs  cleanbuild-all.cjs  commit.rs  diagnostics.cjs  env.cjs  expand-playground.cjs  extract-rust-docs.rs  extract-ts-docs.rs  generate-readmes.cjs  get-diagnostics.cjs  manifests.rs  package-lock.json  package.json  prep-for-commit.cjs  prep.rs  rebase-versions.rs  split-repos.rs  sync-website.cjs  test-crash-handler.js  test-native-crash.cjs  test-playground-expansion.cjs  test-plugin-expansion.cjs
scripts/src/: lib.rs  main.rs
scripts/src/cli/: args.rs  mod.rs
scripts/src/cli/commands/: build.rs  check.rs  commit.rs  diagnostics.rs  expand.rs  manifests.rs  mod.rs  prep.rs  publish_local.rs  push.rs  test.rs  versions.rs
scripts/src/cli/commands/docs/: build_book.rs  check_freshness.rs  extract_rust.rs  extract_ts.rs  generate_readmes.rs  mod.rs
scripts/src/core/: config.rs  deps.rs  manifests.rs  mod.rs  registry.rs  repos.rs  shell.rs  versions.rs
scripts/src/diagnostics/: aggregator.rs  biome.rs  clippy.rs  deno_lint.rs  mod.rs  runner.rs  svelte.rs  tsc.rs
scripts/src/parsers/: mod.rs  rust_docs.rs
scripts/src/tui/: app.rs  event.rs  mod.rs  ui.rs
scripts/src/tui/components/: mod.rs  output_log.rs  progress.rs  status_bar.rs  task_list.rs
scripts/src/utils/: format.rs  mod.rs
scripts/tests/: cli_integration.rs
tests/e2e/: run-zed-test.sh  test-zed-vtsls.js  zed-extension-startup.test.js
tests/e2e/fixtures/ts-project/: package.json  tsconfig.json
tests/e2e/fixtures/ts-project/src/: user.ts
(+12 files in other folders)
