[package]
name = "mf"
version = "0.1.0"
edition = "2024"
description = "Macroforge Tooling - unified CLI/TUI for build, release, and diagnostics"

[[bin]]
name = "mf"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
dialoguer = "0.12.0"

# TUI
ratatui = "0.30.0-beta.0"
crossterm = "0.29.0"

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9.10"

# Graphs
petgraph = "0.8.3"

# Rust parsing
syn = { version = "2", features = ["full", "extra-traits", "visit"] }
quote = "1"
proc-macro2 = "1"


# SWC Core for TypeScript parsing and transformation
swc_core = { version = "54.0.0", features = [
    "ecma_ast",
    "ecma_parser",
    "common"
] }


# Markdown
pulldown-cmark = "0.13"
htmd = "0.5"
scraper = "0.25"

# Terminal
colored = "3.0.0"

# Utils
regex = "1"
walkdir = "2"
ignore = "0.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
ctrlc = "3.4"
ureq = { version = "3.1.4", features = ["json"] }
rayon = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
