[package]
name = "playground-macros"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata.cargo-machete]
# napi is required: napi_derive::napi generates code referencing ::napi
ignored = ["napi"]

[lib]
name = "playground_macros"
crate-type = ["rlib", "cdylib"]

[dependencies]
# Core macro framework - re-exports macroforge_ts_syn, macroforge_ts_quote, macroforge_ts_macros, inventory, serde_json
# Uses vendor symlink - run `deno task setup-vendor` to create symlinks from env vars
macroforge_ts = { path = "vendor/macroforge_ts" }
# NAPI deps required directly (napi_derive generates ::napi references)
napi = { version = "3.5.2", features = ["napi8", "compat-mode"], optional = true }
napi-derive = { version = "3.3.3", optional = true }

# Serialization for parsing decorator options
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

convert_case = "0.10.0"

[features]
default = ["node"]
node = ["dep:napi", "dep:napi-derive", "macroforge_ts/node", "dep:napi-build"]

[build-dependencies]
napi-build = { version = "2.3.1", optional = true }
macroforge_ts = { path = "vendor/macroforge_ts", features = ["build"] }
