[package]
name = "rust-tests"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
# Uses vendor symlinks - run `deno task setup-vendor` to create symlinks from env vars
macroforge_ts = { path = "vendor/macroforge_ts" }
macroforge_ts_quote = { path = "vendor/macroforge_ts_quote" }
macroforge_ts_syn = { path = "vendor/macroforge_ts_syn" }
proc-macro2 = "1"
swc_core = { version = "54.0.0", features = [
  "common",
  "ecma_ast",
  "ecma_codegen",
  "ecma_parser",
  "ecma_quote",
  "ecma_visit",
] }

[dev-dependencies]
trybuild = "1.0"
